金山词霸翻译API请求响应的xml与本地实体对象解析映射完成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.squareup.okio:okio:1.4.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'org.lucee:dom4j:1.6.1'
 }
