1、实现词库界面的主要布局； 2、下拉刷新的控件添加； 3、离线下载放到设置中

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'org.lucee:dom4j:1.6.1'
     compile 'org.quanqi:mpandroidchart:1.7.5'
     compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.github.userswlwork:pull-to-refresh:1.0.0'
 }
