--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.model.application'
 model {
     android {
         compileSdkVersion = 23
-        buildToolsVersion = "23.0.2"
+        buildToolsVersion = "24 rc2"
 
         defaultConfig.with {
             applicationId = "com.left.shothappy"
@@ -66,7 +66,7 @@ dependencies {
     compile 'org.quanqi:mpandroidchart:1.7.5'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.github.userswlwork:pull-to-refresh:1.0.0'
-    compile 'com.android.support:cardview-v7:24.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:23.2.1'
     compile files('libs/httpmime-4.1.3.jar')
     compile files('libs/umeng_social_sdk.jar')
     compile files('libs/SocialSDK_WeiXin_1.jar')
