--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,15 @@ model {
     android.ndk {
         moduleName = "ARNative"
         cppFlags.add("-I${file("../../package/include")}".toString())
+        cppFlags.add("-I${file("../../assimp")}".toString())
         cppFlags.add("-DANDROID")
         cppFlags.add("-fexceptions")
         cppFlags.add("-frtti")
         stl = "gnustl_static"
         ldLibs.add("log")
         ldLibs.add("GLESv2")
+        ldLibs.addAll(["android", "log"])
+
     }
     android.productFlavors {
         create("arm") {
@@ -42,6 +45,7 @@ model {
             jni {
                 dependencies {
                     library file("../../package/Android/libs/armeabi-v7a/libEasyAR.so") abi "armeabi-v7a"
+                    library file("../../assimp/libassimp.so") abi "armeabi-v7a"
                 }
             }
         }
