--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.model.application'
 model {
     android {
         compileSdkVersion = 23
-        buildToolsVersion = "24 rc2"
+        buildToolsVersion = "23.0.2"
 
         defaultConfig.with {
             applicationId = "com.left.shothappy"
