--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.model.application'
 model {
     android {
         compileSdkVersion = 23
-        buildToolsVersion = "23.0.2"
+        buildToolsVersion = "24.0.0 rc3"
 
         defaultConfig.with {
             applicationId = "com.left.shothappy"
@@ -57,8 +57,8 @@ dependencies {
     //bmob-sdk ：Bmob的android sdk包
 
     //okhttp（选填）：为解决弱网情况下SDK请求失败及响应慢的问题，自`V3.4.3版本`开始使用`okhttp`优化SDK的网络框架。
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
     compile 'cn.bmob.android:bmob-sdk:3.4.5'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okio:okio:1.4.0'
@@ -66,9 +66,9 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'org.lucee:dom4j:1.6.1'
     compile 'org.quanqi:mpandroidchart:1.7.5'
-    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:support-v4:23.3.0'
     compile 'com.github.userswlwork:pull-to-refresh:1.0.0'
-    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:cardview-v7:23.3.0'
     compile files('libs/httpmime-4.1.3.jar')
     compile files('libs/umeng_social_sdk.jar')
     compile files('libs/SocialSDK_WeiXin_1.jar')
