1、修改图标； 2、增加10个新的模型； 3、优化单词卡片间隔

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,7 +101,7 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name=".RewardActivity"
-            android:theme="@style/FullScreenTheme"></activity>
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
