--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,64 +1,47 @@
-apply plugin: 'com.android.model.application'
+apply plugin: 'com.android.application'
 
-model {
-    android {
-        compileSdkVersion = 23
-        buildToolsVersion = "24.0.0 rc3"
 
-        defaultConfig.with {
-            applicationId = "com.left.shothappy"
-            minSdkVersion.apiLevel = 15
-            targetSdkVersion.apiLevel = 23
-            versionCode = 1
-            versionName = "1.0"
+android {
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
+
+    defaultConfig {
+        applicationId "com.left.shothappy"
+        minSdkVersion 15
+        targetSdkVersion 25
+        versionCode 1
+        versionName "1.0"
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++11 -frtti -fexceptions"
+                abiFilters "armeabi-v7a"
+            }
         }
-
     }
-    android.buildTypes {
+
+    buildTypes {
         release {
-            minifyEnabled = false
-            proguardFiles.add(file("proguard-rules.pro"))
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    android.ndk {
-        moduleName = "ARNative"
-        cppFlags.add("-I${file("../../package/include")}".toString())
-        cppFlags.add("-DANDROID")
-        cppFlags.add("-fexceptions")
-        cppFlags.add("-frtti")
-        stl = "gnustl_static"
-        ldLibs.add("log")
-        ldLibs.add("GLESv2")
-        ldLibs.addAll(["android", "log"])
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+        }
+    }
 
-    }
-    android.productFlavors {
-        create("arm") {
-            ndk.with {
-                abiFilters.add("armeabi-v7a")
-            }
-        }
-    }
-    android.sources {
+    sourceSets {
         main {
-            jni {
-                dependencies {
-                    library file("../../package/Android/libs/armeabi-v7a/libEasyAR.so") abi "armeabi-v7a"
-                }
-            }
-        }
+            jniLibs.srcDirs = ['src/main/jniLibs']
+        }    
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile fileTree(dir: '../../package/Android/libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    //bmob-sdk ：Bmob的android sdk包
-
-    //okhttp（选填）：为解决弱网情况下SDK请求失败及响应慢的问题，自`V3.4.3版本`开始使用`okhttp`优化SDK的网络框架。
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'cn.bmob.android:bmob-sdk:3.4.5'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okio:okio:1.4.0'
@@ -66,19 +49,7 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'org.lucee:dom4j:1.6.1'
     compile 'org.quanqi:mpandroidchart:1.7.5'
-    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.github.userswlwork:pull-to-refresh:1.0.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
-    compile files('libs/httpmime-4.1.3.jar')
-    compile files('libs/umeng_social_sdk.jar')
-    compile files('libs/SocialSDK_WeiXin_1.jar')
-    compile files('libs/SocialSDK_WeiXin_2.jar')
-    compile files('libs/mta-sdk-1.6.2.jar')
-    compile files('libs/open_sdk_r5509.jar')
-    compile files('libs/SocialSDK_QQZone_3.jar')
-    compile files('libs/SocialSDK_Sina.jar')
-    compile files('libs/SocialSDK_tencentWB_1.jar')
-    compile files('libs/SocialSDK_tencentWB_2.jar')
-    compile files('libs/SocialSDK_tencentWB_3.jar')
-    compile files('libs/weiboSDKCore_3.1.4.jar')
+    compile 'com.android.support:cardview-v7:25.3.1'
 }
